Add the --add-reads dirs